# cicd_pipeline_practice

./: .env.sample  .gitignore  README.md  app.py  cdk.json  pyproject.toml  setup.py
cicd_pipeline_practice/: cdk_pipelines_demo_pipeline_stack.py  cdk_pipelines_stage.py  cicd_pipeline_practice_stack.py  my_practice_stack.py
tests/unit/: test_cicd_pipeline_practice_stack.py
